EN-2163 ContentModel service filtering tidy up